stripping duplicate class when epub:type exists

--- a/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/appendix-a.xhtml
@@ -8,20 +8,20 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="backmatter">
-		<section class="appendix" epub:type="appendix" id="P70004858060007A3">
+		<section epub:type="appendix" id="P70004858060007A3">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="20" epub:type="pagebreak" id="P7000485806000928"/><span class="label" epub:type="label">Appendix </span><span class="number" epub:type="ordinal">A</span> Title</h1>
-				<p class="subtitle" epub:type="subtitle">Appendix Subtitle</p>
+				<h1 epub:type="title"><span class="pagebreak" title="20" epub:type="pagebreak" id="P7000485806000928"/><span epub:type="label">Appendix </span><span class="number" epub:type="ordinal">A</span> Title</h1>
+				<p epub:type="subtitle">Appendix Subtitle</p>
 			</header>
 			<section id="P70004858060007A5" class="level2">
 				<header>
-					<h2 class="title" epub:type="title"><span class="label" epub:type="label">Appendix Section</span></h2>
+					<h2 epub:type="title"><span epub:type="label">Appendix Section</span></h2>
 				</header>
 				<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. </p>
 				
 				<section id="P70004858060007A6" class="level3">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">1 </span><span class="label" epub:type="label">Subsection</span></h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">1 </span><span epub:type="label">Subsection</span></h3>
 					</header>
 					<p>This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. This is Appendix Body Text. </p>
 					<ul>
@@ -33,7 +33,7 @@
 						</li>
 					</ul>
 					<div class="listgroup" id="d6e7085">
-						<p class="title" epub:type="title">This is a list title</p>
+						<p epub:type="title">This is a list title</p>
 						<ol>
 							<li>
 								<p>This is Appendix orderedlist item text (should appear as numbered)</p>
