--- a/samples/structure-sample-01/EPUB/xhtml/copyright.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/copyright.xhtml
@@ -10,7 +10,7 @@
 	<body class="fixed" epub:type="frontmatter">
 		<section id="d6e264" class="copyright-page level1">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="iv" epub:type="pagebreak" id="P7000485806000695"/>Copyright Page</h1>
+				<h1 epub:type="title"><span class="pagebreak" title="iv" epub:type="pagebreak" id="P7000485806000695"/>Copyright Page</h1>
 			</header>
 			<table class="informaltable" id="P7000485806000694">
 				<tbody>
