--- a/samples/structure-sample-01/EPUB/xhtml/dedication.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/dedication.xhtml
@@ -9,7 +9,7 @@
 	</head>
 	<body class="fixed" epub:type="frontmatter">
 		<section class="dedicationset" id="d6e435" aria-label="dedications">
-			<section class="dedication" epub:type="dedication" id="d6e437" aria-label="dedication">
+			<section epub:type="dedication" id="d6e437" aria-label="dedication">
 				<p><span class="pagebreak" title="v" epub:type="pagebreak" id="P7000485806000698"/>This is the dedication text: To all teachers working with English learners. May they remember our favorite teacher’s mantra, “If I teach them, they will learn.”</p>
 				<div class="authorgroup">
 					<div class="author">
