--- a/samples/structure-sample-01/EPUB/xhtml/figures-tables.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/figures-tables.xhtml
@@ -8,21 +8,21 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="bodymatter">
-		<section class="chapter" epub:type="chapter" id="P700048580600071E">
+		<section epub:type="chapter" id="P700048580600071E">
 			<header>
-				<h1 class="title" epub:type="title"><span class="label" epub:type="label"><span class="pagebreak" title="7" epub:type="pagebreak" id="P700048580600071F"/>Chapter </span><span class="number" epub:type="ordinal">3: </span>Figures and Tables</h1>
+				<h1 epub:type="title"><span epub:type="label"><span class="pagebreak" title="7" epub:type="pagebreak" id="P700048580600071F"/>Chapter </span><span class="number" epub:type="ordinal">3: </span>Figures and Tables</h1>
 			</header>
 			<section class="bodymatter" id="d6e3325" aria-label="Chapter body">
 				<section id="P7000485806000720" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">3.1 </span>Figure</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">3.1 </span>Figure</h3>
 					</header>
 					<p>An illustration, diagram, photo, etc, that is typically referenced from the main flow of the document and that can, without affecting the flow of the document, be moved away from that main flow, e.g. to the side of the page, or to dedicated pages.</p>
 					<p>Although the primary content of a figure is usually a graphic, the contents of a figure may also be textual or tabular.</p>
 					<figure class="figure" id="P7000485806000721">
 						<img alt="alternative text" width="705" height="399" src="../images/fxvii-01.png" />
 						<figcaption>
-							<p><span class="label" epub:type="label">Figure </span><span class="number" epub:type="ordinal">3.1 </span>Figure Title </p>
+							<p><span epub:type="label">Figure </span><span class="number" epub:type="ordinal">3.1 </span>Figure Title </p>
 							<div class="caption"><p>This is caption text. This is caption text. This is caption text. This is caption text. This is caption text. This is caption text. This is caption text. This is caption text.</p></div>
 							<div class="source"><p>This is source text <cite>This is citation text</cite>.</p></div>
 						</figcaption>
@@ -30,7 +30,7 @@
 				</section>
 				<section id="P7000485806000722" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">3.2 </span>Informalfigure</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">3.2 </span>Informalfigure</h3>
 					</header>
 					<p>informalfigure is a class of figure that floats, is not referenced in the text, is usually a photograph, and is un-numbered.</p>
 					<figure class="informalfigure" id="P7000485806000723">
@@ -104,7 +104,7 @@
 				</section>
 				<section id="P7000485806000725" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">3.3 </span>Inline Figure</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">3.3 </span>Inline Figure</h3>
 					</header>
 					<p>inline is a special class of figure that is required to be placed inline with running text, is always titled or captioned, is a graphic, and is not labeled or numbered. When a graphic is used alone with no caption, use the img element</p>
 					<figure class="inline" id="d2e3535">
@@ -113,7 +113,7 @@
 				</section>
 				<section id="P7000485806000726" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">3.4 </span>Chapter or Part Opening Figure</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">3.4 </span>Chapter or Part Opening Figure</h3>
 					</header>
 					<p>opener is a class of figure that is used as part or chapter opening art. Opening art is often specially positioned relative to a design. It does not arbitrarily float, nor is it always inline. It often has a designated special position within the overall opening layout.</p>
 					<figure class="opener" id="P7000485806000727">
@@ -122,12 +122,12 @@
 				</section>
 				<section id="P7000485806000728" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">3.5 </span>Figure containing a Table</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">3.5 </span>Figure containing a Table</h3>
 					</header>
 					<p>When a table can float away from its main content without affecting flow or understanding of that content, table must be nested in figure with class="table". when table is nested inside of figure, the table title, caption, and source is coded as belonging to the containing figure</p>
 					<figure class="table" id="P7000485806000729">
 						<figcaption>
-							<p class="title"><span class="label" epub:type="label">Table </span><span class="number" epub:type="ordinal">3.1 </span>Table Title</p>
+							<p class="title"><span epub:type="label">Table </span><span class="number" epub:type="ordinal">3.1 </span>Table Title</p>
 						</figcaption>
 						<table>
 							<tbody>
@@ -152,7 +152,7 @@
 					</figure>
 					<figure class="table" id="P700048580600072A">
 						<figcaption>
-							<p class="title"><span class="label" epub:type="label">Table </span><span class="number" epub:type="ordinal">3.2 </span>Kirton Adaption-Innovation Inventory</p>
+							<p class="title"><span epub:type="label">Table </span><span class="number" epub:type="ordinal">3.2 </span>Kirton Adaption-Innovation Inventory</p>
 							<div class="caption">
 								<p>The following questions are about your style of work behavior (e.g., decision making) in your organization. Please respond to the question based on your assessment of yourself. Please read all the questions first, and then respond.</p>
 								<ul class="ul_none">
@@ -169,7 +169,7 @@
 								<tr>
 									<td colspan="6">
 										<div class="source">
-											<p><span class="pagebreak" title="8" epub:type="pagebreak" id="P700048580600072C"/><span class="label" epub:type="label">Source: </span>Monavvarrian, A. 2004. Administrative reform and style of work behavior: Adaptors-innovators, <cite>Public Organization Review: A Global Journal</cite> 2: 141–164.</p>
+											<p><span class="pagebreak" title="8" epub:type="pagebreak" id="P700048580600072C"/><span epub:type="label">Source: </span>Monavvarrian, A. 2004. Administrative reform and style of work behavior: Adaptors-innovators, <cite>Public Organization Review: A Global Journal</cite> 2: 141–164.</p>
 										</div>
 									</td>
 								</tr>
@@ -445,7 +445,7 @@
 				</section>
 				<section id="P700048580600072D" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">3.6 </span>Informaltable</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">3.6 </span>Informaltable</h3>
 					</header>
 					<p>An informaltable is a table that must be set inline to the running text. It is typically un-numbered.</p>
 					<table class="informaltable largetable" id="P700048580600072E">
@@ -670,7 +670,7 @@
 				</section>
 				<section id="P7000485806000730" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">3.7 </span>Image</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">3.7 </span>Image</h3>
 					</header>
 					<p>An inline image with no caption is simply coded as image</p>
 					<section class="procedure" id="d6e4875" aria-label="procedure">
