--- a/samples/structure-sample-01/EPUB/xhtml/full-toc.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/full-toc.xhtml
@@ -8,31 +8,31 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="frontmatter">
-		<nav class="toc" epub:type="toc" id="P700048580600069C">
+		<nav epub:type="toc" id="P700048580600069C">
 			<header>
-				<h1 class="title" epub:type="title">Detailed Contents</h1>
+				<h1 epub:type="title">Detailed Contents</h1>
 			</header>
 			<p>This TOC shows Chapter 1 with several levels of tocentries. All other chapters show chapter title only.</p>
 			<div class="tocproductfrontmatter">
 				<ol class="tocentrylist">
-					<li class="tocpreface"><p><a href="preface.xhtml#P70004858060006A7"><span class="title" epub:type="title">Preface</span></a></p></li>
+					<li class="tocpreface"><p><a href="preface.xhtml#P70004858060006A7"><span epub:type="title">Preface</span></a></p></li>
 				</ol>
 			</div>
 			<div class="tocproductbodymatter">
 				<ol class="tocentrylist">
 					<li class="tocpart">
-						<p><a href="part01.xhtml#P70004858060006B5"><span class="title" epub:type="title"><span class="label" epub:type="label">Part </span><span class="number" epub:type="ordinal">1 </span>Part Title</span></a></p>
+						<p><a href="part01.xhtml#P70004858060006B5"><span epub:type="title"><span epub:type="label">Part </span><span class="number" epub:type="ordinal">1 </span>Part Title</span></a></p>
 						<ol class="tocentrylist">
-							<li><p><a href="asides.xhtml#P70004858060006F9"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2 </span>Asides</span></a></p>
+							<li><p><a href="asides.xhtml#P70004858060006F9"><span epub:type="title"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2 </span>Asides</span></a></p>
 							</li>
-							<li><p><a href="figures-tables.xhtml#P700048580600071E"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">3 </span>Figures and Tables</span></a></p>
+							<li><p><a href="figures-tables.xhtml#P700048580600071E"><span epub:type="title"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">3 </span>Figures and Tables</span></a></p>
 							</li>
-							<li><p><a href="links.xhtml#P7000485806000731"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">4 </span>Linked Content</span></a></p>
+							<li><p><a href="links.xhtml#P7000485806000731"><span epub:type="title"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">4 </span>Linked Content</span></a></p>
 							</li>
-							<li><p><a href="body-content.xhtml#P700048580600075C"><span class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">6 </span>Typical Chapter Frontmatter and Backmatter Sections</span></a></p>
+							<li><p><a href="body-content.xhtml#P700048580600075C"><span epub:type="title"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">6 </span>Typical Chapter Frontmatter and Backmatter Sections</span></a></p>
 								<div class="tocchapterbodymatter">
 									<ol class="tocentrylist">
-										<li class="tocintroduction"><p><a href="body-content.xhtml#P700048580600075E"><span class="title" epub:type="title">Introduction</span></a></p></li>
+										<li class="tocintroduction"><p><a href="body-content.xhtml#P700048580600075E"><span epub:type="title">Introduction</span></a></p></li>
 									</ol>
 								</div>
 							</li>
@@ -42,13 +42,13 @@
 			</div>
 			<div class="tocproductbackmatter">
 				<ol class="tocentrylist">
-					<li class="tocappendix"><p><a href="appendix-a.xhtml#P70004858060007A3"><span class="title" epub:type="title"><span class="label" epub:type="label">Appendix </span><span class="number" epub:type="ordinal">A </span>Title</span></a></p></li>
-					<li class="tocbibliography"><p><a href="bibliography02.xhtml#P70004858060007A7"><span class="title" epub:type="title"><span class="label" epub:type="label">Bibliography</span></span></a></p></li>
-					<li class="tocglossary"><p><a href="glossary.xhtml#P70004858060007B0"><span class="title" epub:type="title"><span class="label" epub:type="label">Glossary</span></span></a></p></li>
-					<li><p><a href="subject-index.xhtml#P70004858060007BB"><span class="title" epub:type="title"><span class="label" epub:type="label">Subject Index</span></span></a></p></li>
-					<li class="tocname-index"><p><a href="name-index.xhtml#P70004858060007CF"><span class="title" epub:type="title"><span class="label" epub:type="label">Name Index</span></span></a></p></li>
-					<li class="tocrearnotes" epub:type="rearnote"><p><a href="endnotes.xhtml#P70004858060007D1"><span class="title" epub:type="title"><span class="label" epub:type="label">Endnotes: </span></span><span class="subtitle" epub:type="subtitle">Subtitle text</span></a><span class="pagebreak" title="viii" epub:type="pagebreak" id="P700048580600069D"/><span class="pagebreak" title="ix" epub:type="pagebreak" id="P700048580600069E"/></p></li>
-					<li class="toccreditset"><p><a href="credits.xhtml#P70004858060007D6"><span class="title" epub:type="title"><span class="label" epub:type="label">Credits</span></span></a></p></li>
+					<li class="tocappendix"><p><a href="appendix-a.xhtml#P70004858060007A3"><span epub:type="title"><span epub:type="label">Appendix </span><span class="number" epub:type="ordinal">A </span>Title</span></a></p></li>
+					<li class="tocbibliography"><p><a href="bibliography02.xhtml#P70004858060007A7"><span epub:type="title"><span epub:type="label">Bibliography</span></span></a></p></li>
+					<li class="tocglossary"><p><a href="glossary.xhtml#P70004858060007B0"><span epub:type="title"><span epub:type="label">Glossary</span></span></a></p></li>
+					<li><p><a href="subject-index.xhtml#P70004858060007BB"><span epub:type="title"><span epub:type="label">Subject Index</span></span></a></p></li>
+					<li class="tocname-index"><p><a href="name-index.xhtml#P70004858060007CF"><span epub:type="title"><span epub:type="label">Name Index</span></span></a></p></li>
+					<li class="tocrearnotes" epub:type="rearnote"><p><a href="endnotes.xhtml#P70004858060007D1"><span epub:type="title"><span epub:type="label">Endnotes: </span></span><span epub:type="subtitle">Subtitle text</span></a><span class="pagebreak" title="viii" epub:type="pagebreak" id="P700048580600069D"/><span class="pagebreak" title="ix" epub:type="pagebreak" id="P700048580600069E"/></p></li>
+					<li class="toccreditset"><p><a href="credits.xhtml#P70004858060007D6"><span epub:type="title"><span epub:type="label">Credits</span></span></a></p></li>
 				</ol>
 			</div>
 		</nav>
