--- a/samples/structure-sample-01/EPUB/xhtml/glossary.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/glossary.xhtml
@@ -10,50 +10,50 @@
 	<body class="fixed" epub:type="backmatter">
 		<section epub:type="glossary" id="P70004858060007B0" class="glossary level1">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="22" epub:type="pagebreak" id="P7000485806000948"/><span class="label" epub:type="label">Glossary</span></h1>
+				<h1 epub:type="title"><span class="pagebreak" title="22" epub:type="pagebreak" id="P7000485806000948"/><span epub:type="label">Glossary</span></h1>
 			</header>
 			<section id="P70004858060007B1" class="glossdiv level2">
 				<header>
-					<h2 class="title" epub:type="title">A</h2>
+					<h2 epub:type="title">A</h2>
 				</header>
 				<dl class="glossentrylist">
-					<dt class="glossterm" epub:type="glossterm" id="P70004858060007B2"><dfn>glossterm 1 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
-					<dd class="glossdef" epub:type="glossdef">
+					<dt epub:type="glossterm" id="P70004858060007B2"><dfn>glossterm 1 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
+					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt class="glossterm" epub:type="glossterm" id="P70004858060007B3"><dfn>glossterm 2 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
-					<dd class="glossdef" epub:type="glossdef">
+					<dt epub:type="glossterm" id="P70004858060007B3"><dfn>glossterm 2 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
+					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt class="glossterm" epub:type="glossterm" id="P70004858060007B4"><dfn>glossterm 3 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
-					<dd class="glossdef" epub:type="glossdef">
+					<dt epub:type="glossterm" id="P70004858060007B4"><dfn>glossterm 3 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
+					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt class="glossterm" epub:type="glossterm" id="P70004858060007B5"><dfn>glossterm 4 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
-					<dd class="glossdef" epub:type="glossdef">
+					<dt epub:type="glossterm" id="P70004858060007B5"><dfn>glossterm 4 text should be dark green and on line of its own </dfn><span class="pronunciation">(pronunciation text)</span></dt>
+					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
 				</dl>
 			</section>
 			<section id="P70004858060007B6" class="glossdiv level2">
 				<header>
-					<h2 class="title" epub:type="title">B</h2>
+					<h2 epub:type="title">B</h2>
 				</header>
 				<dl class="glossentrylist">
-					<dt class="glossterm" epub:type="glossterm" id="P70004858060007B7"><dfn>glossterm 5 text should be dark green and on line of its own</dfn></dt>
-					<dd class="glossdef" epub:type="glossdef">
+					<dt epub:type="glossterm" id="P70004858060007B7"><dfn>glossterm 5 text should be dark green and on line of its own</dfn></dt>
+					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt class="glossterm" epub:type="glossterm" id="P70004858060007B8"><dfn>glossterm 6 text should be dark green and on line of its own</dfn></dt>
-					<dd class="glossdef" epub:type="glossdef">
+					<dt epub:type="glossterm" id="P70004858060007B8"><dfn>glossterm 6 text should be dark green and on line of its own</dfn></dt>
+					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt class="glossterm" epub:type="glossterm" id="P70004858060007B9"><dfn>glossterm 7 text should be dark green and on line of its own</dfn></dt>
-					<dd class="glossdef" epub:type="glossdef">
+					<dt epub:type="glossterm" id="P70004858060007B9"><dfn>glossterm 7 text should be dark green and on line of its own</dfn></dt>
+					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
-					<dt class="glossterm" epub:type="glossterm" id="P70004858060007BA"><dfn>glossterm 8 text should be dark green and on line of its own</dfn></dt>
-					<dd class="glossdef" epub:type="glossdef">
+					<dt epub:type="glossterm" id="P70004858060007BA"><dfn>glossterm 8 text should be dark green and on line of its own</dfn></dt>
+					<dd epub:type="glossdef">
 						<p>Definition text should be normal black type.</p>
 					</dd>
 				</dl>
