--- a/samples/structure-sample-01/EPUB/xhtml/halftitle.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/halftitle.xhtml
@@ -10,7 +10,7 @@
 	<body class="fixed" epub:type="frontmatter">
 		<section epub:type="halftitlepage" id="d6e189" class="halftitlepage level1">
 			<header epub:type="fulltitle">
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="ii" epub:type="pagebreak" id="P7000485806000692"/>Half Titlepage Title</h1>
+				<h1 epub:type="title"><span class="pagebreak" title="ii" epub:type="pagebreak" id="P7000485806000692"/>Half Titlepage Title</h1>
 			</header>
 		</section>
 	</body>
