--- a/samples/structure-sample-01/EPUB/xhtml/index04.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/index04.xhtml
@@ -10,13 +10,13 @@
 	<body class="fixed" epub:type="index">
 		<section epub:type="index-group" id="P70004858060007CB" class="index-group level2">
 			<header>
-				<h2 class="title" epub:type="title" id="P70004858060007CC">Z</h2>
+				<h2 epub:type="title" id="P70004858060007CC">Z</h2>
 			</header>
 			<ul>
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007CD"><p>
-						<span class="index-term" epub:type="index-term">ZZZ destination for seealso link, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007CE"><p>
-						<span class="index-term" epub:type="index-term">ZZZ destination for see link, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
+				<li epub:type="index-entry" id="P70004858060007CD"><p>
+						<span epub:type="index-term">ZZZ destination for seealso link, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
+				<li epub:type="index-entry" id="P70004858060007CE"><p>
+						<span epub:type="index-term">ZZZ destination for see link, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
 			</ul>
 		</section>
 	</body>
