--- a/samples/structure-sample-01/EPUB/xhtml/list-of-sidebars.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/list-of-sidebars.xhtml
@@ -10,7 +10,7 @@
 	<body class="fixed" epub:type="frontmatter">
 		<nav class="toc toc_alternate" id="P70004858060006A2">
 			<header>
-				<h1 class="title" epub:type="title">List of sidebars</h1>
+				<h1 epub:type="title">List of sidebars</h1>
 			</header>
 			<ol class="tocentrylist">
 				<li class="tocsidebar"><p><a href="asides.xhtml#P70004858060006FC">Sidebar Label: Sidebar Title</a></p></li>
