--- a/samples/structure-sample-01/EPUB/xhtml/list-of-tables.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/list-of-tables.xhtml
@@ -8,9 +8,9 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="frontmatter">
-		<nav class="lot" epub:type="lot" id="P700048580600069F">
+		<nav epub:type="lot" id="P700048580600069F">
 			<header>
-				<h1 class="title" epub:type="title">List of numbered tables</h1>
+				<h1 epub:type="title">List of numbered tables</h1>
 			</header>
 			<ol>
 				<li><p><a href="asides.xhtml#P70004858060006FF">Table 2.1</a></p></li>
