--- a/samples/structure-sample-01/EPUB/xhtml/name-index.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/name-index.xhtml
@@ -10,10 +10,10 @@
 	<body class="fixed" epub:type="index">
 		<section class="name-index" id="P70004858060007CF">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="24" epub:type="pagebreak" id="P7000485806000000000000000011968"/> Name Index </h1>
+				<h1 epub:type="title"><span class="pagebreak" title="24" epub:type="pagebreak" id="P7000485806000000000000000011968"/> Name Index </h1>
 			</header>
-			<ul class="index-entry-list" epub:type="index-entry-list">
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007D0"><p><span class="index-term" epub:type="index-term">Name of Corporation </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
+			<ul epub:type="index-entry-list">
+				<li epub:type="index-entry" id="P70004858060007D0"><p><span epub:type="index-term">Name of Corporation </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p></li>
 			</ul>
 		</section>
 	</body>
