--- a/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/nav.xhtml
@@ -7,7 +7,7 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body>
-		<nav id="toc" class="toc" epub:type="toc">
+		<nav id="toc" epub:type="toc">
 			<h1>Contents</h1>
 			<ol>
 				<li id="toc_d6e189"><a href="halftitle.xhtml#d6e189"> Half Titlepage Title </a></li>
