--- a/samples/structure-sample-01/EPUB/xhtml/seriespage.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/seriespage.xhtml
@@ -10,7 +10,7 @@
 	<body class="fixed" epub:type="frontmatter">
 		<section epub:type="seriespage" id="d6e25" class="seriespage level1">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="i" epub:type="pagebreak" id="P7000485806000691"/>Series Page Section</h1>
+				<h1 epub:type="title"><span class="pagebreak" title="i" epub:type="pagebreak" id="P7000485806000691"/>Series Page Section</h1>
 			</header>
 			<p>
 				<span class="strong">Human Communication Disorders: An Introduction</span> , 8e, Noma B. Anderson and George H. Shames, © 2011, ISBN 0137061331 </p>
