--- a/samples/structure-sample-01/EPUB/xhtml/subject-index.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/subject-index.xhtml
@@ -10,7 +10,7 @@
 	<body class="fixed" epub:type="index">
 		<section class="subject-index" id="P70004858060007BB">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="23" epub:type="pagebreak" id="P7000485806000958"/> Subject Index </h1>
+				<h1 epub:type="title"><span class="pagebreak" title="23" epub:type="pagebreak" id="P7000485806000958"/> Subject Index </h1>
 			</header>
 		</section>
 	</body>
