--- a/samples/structure-sample-01/EPUB/xhtml/titlepage.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/titlepage.xhtml
@@ -10,7 +10,7 @@
 	<body class="fixed" epub:type="frontmatter">
 		<section epub:type="titlepage" id="d6e199" class="titlepage level1">
 			<header epub:type="fulltitle">
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="iii" epub:type="pagebreak" id="P7000485806000693"/>Titlepage Title</h1>
+				<h1 epub:type="title"><span class="pagebreak" title="iii" epub:type="pagebreak" id="P7000485806000693"/>Titlepage Title</h1>
 			</header>
 			<div class="edition"><p><span class="strong">FOURTH EDITION</span></p></div>
 			<div class="authorgroup">
