--- a/samples/structure-sample-01/EPUB/xhtml/about-authors.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/about-authors.xhtml
@@ -10,26 +10,26 @@
 	<body class="fixed" epub:type="frontmatter">
 		<section id="P70004858060006A4" class="aboutauthorset level1">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="xi" epub:type="pagebreak" id="P70004858060006A5"/><span class="label" epub:type="label">About the Authors Section</span></h1>
+				<h1 epub:type="title"><span class="pagebreak" title="xi" epub:type="pagebreak" id="P70004858060006A5"/><span epub:type="label">About the Authors Section</span></h1>
 			</header>
 			<p>aboutauthorset is block level section that contains one or more aboutauthor author profiles. It is typically labeled "About the Author" and appears in the product frontmatter and sometimes in structures such as sidebars.</p>
 			<section id="d6e1107" class="aboutauthor level2">
 				<header>
-					<h2 class="title" epub:type="title">Author Name</h2>
+					<h2 epub:type="title">Author Name</h2>
 				</header>
 				<p>is a author bio text here...visiting professor at Florida State University. She taught classes in early literacy, assessment, and strategies for teaching English language learners at California State University, Fresno, until her retirement in 2004. <span class="emphasis">50 Strategies for Teaching English Language Learners</span>, Fourth Edition, is Dr. Herrell’s 15th book for Pearson. Her other previous books include <span class="emphasis">Camcorder in the Classroom </span>with Joel Fowler; <span class="emphasis">Reflective Planning, Teaching, and Evaluation: K–12 </span>with Judy Eby and Michael Jordan; and <span class="emphasis">Fifty Active Learning Strategies for Improving Vocabulary, Fluency, and Comprehension </span>with Michael Jordan. Dr. Herrell’s writing and research are built on her experiences teaching in Florida’s public schools for 23 years. She and coauthor Dr. Jordan are engaged in research in public schools in California, Florida, and Alaska to validate the effectiveness of the strategies described in this text.</p>
 				<p><img width="222" height="241" src="../images/f00xi-01.jpg" alt="Author picture" /></p>
 			</section>
 			<section id="d6e1134" class="aboutauthor level2">
 				<header>
-					<h2 class="title" epub:type="title">Author Name</h2>
+					<h2 epub:type="title">Author Name</h2>
 				</header>
 				<p>is a author bio text here...recently retired from California State University, Fresno—has taught primary grades through high school in Georgia, Alabama, Florida, and California. Dr. Jordan is an actor, education director, and former B-52 pilot. He and Dr. Herrell incorporate many dramatic reenactment strategies in their joint research working with vocabulary and comprehension development in children learning English in public schools. <span class="emphasis">50 Strategies for Teaching English Language Learners</span>, Fourth Edition, is Dr. Jordan’s eighth book for Pearson. His other previous books include <span class="emphasis">Reflective Planning, Teaching, and Evaluation: K–12 </span>with Judy Eby and Adrienne Herrell; and <span class="emphasis">Fifty Active Learning Strategies for Improving Vocabulary, Fluency, and Comprehension </span>and <span class="emphasis">35 Classroom Management Strategies: Promoting Learning and Building Community </span>with Adrienne Herrell. He has published several articles on interactive script writing and vocabulary development to enhance reading comprehension for children.</p>
 				<p><img width="220" height="241" src="../images/f00xi-02.jpg" alt="Author picture" /></p>
 			</section>
 			<section id="d6e1161" class="aboutauthor level2">
 				<header>
-					<h2 class="title" epub:type="title">Author Name</h2>
+					<h2 epub:type="title">Author Name</h2>
 				</header>
 				<p>author bio text here serve as educational consultants to a number of school districts across the nation and have presented widely on the subject of reading and comprehension at national and international conferences.<span class="pagebreak" title="xii" epub:type="pagebreak" id="P70004858060006A6"/></p>
 			</section>
