--- a/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/asides.xhtml
@@ -8,9 +8,9 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="bodymatter">
-		<section class="chapter" epub:type="chapter" id="P70004858060006F9">
+		<section epub:type="chapter" id="P70004858060006F9">
 			<header>
-				<h1 class="title" epub:type="title"><span class="label" epub:type="label"><span class="pagebreak" title="5" epub:type="pagebreak" id="P70004858060006FA"/>Chapter </span><span class="number" epub:type="ordinal">2: </span>Asides</h1>
+				<h1 epub:type="title"><span epub:type="label"><span class="pagebreak" title="5" epub:type="pagebreak" id="P70004858060006FA"/>Chapter </span><span class="number" epub:type="ordinal">2: </span>Asides</h1>
 			</header>
 			<section class="frontmatter" id="d6e2738" aria-label="Chapter front">
 				<p>Asides are block-level supplemental content that may present in a number of ways. They are broken into the following categories:</p>
@@ -26,12 +26,12 @@
 			<section class="bodymatter" id="d6e2772" aria-label="Chapter body">
 				<section id="P70004858060006FB" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.1 </span>Sidebars</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">2.1 </span>Sidebars</h3>
 					</header>
 					<p>A sidebar is a titled aside that is typically several paragraphs in length and may contain images and media and even small titled sections and a practice section at the end. It is typically thought of as a "boxed feature", owing to a common design treatment it receives to set it apart from the running text. It intrinsically floats; like a typical figure or table, it is allowed to be presented away from any text reference. Sidebars commonly have a label in addition to a title. </p>
 					<aside class="sidebar" id="P70004858060006FC">
 						<header>
-							<h4 class="title" epub:type="title" id="P70004858060006FD"><span class="label" epub:type="label">Sidebar label</span><a id="P70004858060006FE"></a>Sidebar title</h4>
+							<h4 epub:type="title" id="P70004858060006FD"><span epub:type="label">Sidebar label</span><a id="P70004858060006FE"></a>Sidebar title</h4>
 						</header>
 						<p>This is sidebar text. This is sidebar texts. This is sidebar text. This is sidebar text. </p>
 						<p>This is sidebar text. This is sidebar text. This is sidebar text. This is sidebar text. </p>
@@ -54,10 +54,10 @@
 							<li><p>This is an orderedlist in a sidebar. It should render with a number and a hanging indent</p></li>
 							<li><p>This is an orderedlist in a sidebar. It should render with a number and a hanging indent</p></li>
 						</ol>
-						<p>This is sidebar text. This is sidebar text. This is a cross reference to <a href="#P70004858060006FF"><span class="label" epub:type="label">Table </span><span class="label" epub:type="label">2.1</span></a> in the sidebar text. This is sidebar text. This is sidebar text. </p>
+						<p>This is sidebar text. This is sidebar text. This is a cross reference to <a href="#P70004858060006FF"><span epub:type="label">Table </span><span epub:type="label">2.1</span></a> in the sidebar text. This is sidebar text. This is sidebar text. </p>
 						<figure class="table" id="P70004858060006FF">
 							<figcaption>
-								<p class="title"><span class="label" epub:type="label">Table </span><span class="number" epub:type="ordinal">2.1 </span>This is the table title</p>
+								<p class="title"><span epub:type="label">Table </span><span class="number" epub:type="ordinal">2.1 </span>This is the table title</p>
 							</figcaption>
 							<table class="largetable">
 								<thead>
@@ -120,22 +120,22 @@
 								</tbody>
 							</table>
 						</figure>
-						<section class="practice" epub:type="practice" id="P7000485806000702">
+						<section epub:type="practice" id="P7000485806000702">
 							<header>
-								<h5 id="P7000485806000703" class="title" epub:type="title"><span class="label" epub:type="label">Sidebar Practice Section Label</span></h5>
+								<h5 id="P7000485806000703" epub:type="title"><span epub:type="label">Sidebar Practice Section Label</span></h5>
 							</header>
 							<ol class="practicelist">
-								<li class="general-problem" id="P7000485806000704"><div class="question" epub:type="question" id="P7000485806000705">
+								<li class="general-problem" id="P7000485806000704"><div epub:type="question" id="P7000485806000705">
 										<p>Sidebar practice question text autonumbering in arabic numerals per CSS.</p></div></li>
-								<li class="general-problem" id="P7000485806000706"><div class="question" epub:type="question" id="P7000485806000707">
+								<li class="general-problem" id="P7000485806000706"><div epub:type="question" id="P7000485806000707">
 										<p>Sidebar practice question text autonumbering in arabic numerals per CSS</p>
 									</div>
 								</li>
-								<li class="general-problem" id="P7000485806000708"><div class="question" epub:type="question" id="P7000485806000709">
+								<li class="general-problem" id="P7000485806000708"><div epub:type="question" id="P7000485806000709">
 										<p>Sidebar practice question text autonumbering in arabic numerals per CSS</p>
 									</div>
 								</li>
-								<li class="general-problem" id="P700048580600070A"><div class="question" epub:type="question" id="P700048580600070B">
+								<li class="general-problem" id="P700048580600070A"><div epub:type="question" id="P700048580600070B">
 										<p>Sidebar practice question text autonumbering in arabic numerals per CSS</p>
 									</div>
 								</li>
@@ -147,25 +147,25 @@
 				</section>
 				<section id="P700048580600070C" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.2 </span>Footnotes</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">2.2 </span>Footnotes</h3>
 					</header>
 					<p>A footnote is an aside associated with a specific range of text. It is indicated by a marker in the text known as the footnote reference, typically a raised number or symbol. The presentation of the footnote itself is largely dependent on the presentation medium. In print, the footnote appears at the bottom of a page or of an object. In a digital product, the footnote reference is typically a hyperlink which may launch a popup window or re-direct the user to another location in the publication. The hyperlink to the footnote receives a special class, "noteref footnote", so that software applications and designers can treat them uniquely from other hyperlinks.</p>
-					<p>This is normal body text containing footnote reference.<a class="noteref noteref_footnote" epub:type="noteref" id="r__P700048580600071D" href="#P700048580600071D">1</a> This is normal body text.</p><aside class="footnote" epub:type="footnote" id="P700048580600071D"><p><span class="number" epub:type="ordinal"><a href="#r__P700048580600071D">1</a></span> This is footnote text. Depending on the reader, the footnote may display in different formats. <span>&lt;footnote in standard browser presents following paragraph containing footnote reference. In EPUB Reading System desired presentation is for footnote to appear in popup when user clicks on footnote reference&gt;</span></p></aside>
+					<p>This is normal body text containing footnote reference.<a class="noteref noteref_footnote" epub:type="noteref" id="r__P700048580600071D" href="#P700048580600071D">1</a> This is normal body text.</p><aside epub:type="footnote" id="P700048580600071D"><p><span class="number" epub:type="ordinal"><a href="#r__P700048580600071D">1</a></span> This is footnote text. Depending on the reader, the footnote may display in different formats. <span>&lt;footnote in standard browser presents following paragraph containing footnote reference. In EPUB Reading System desired presentation is for footnote to appear in popup when user clicks on footnote reference&gt;</span></p></aside>
 				</section>
 				<section id="P700048580600070D" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.3 </span>Endnotes</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">2.3 </span>Endnotes</h3>
 					</header>
 					<section id="P70004858060000000000000002226F6" class="level2">
 						<header>
-							<h4 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.3.1 </span>Chapter Endnotes</h4>
+							<h4 epub:type="title"><span class="number" epub:type="ordinal">2.3.1 </span>Chapter Endnotes</h4>
 						</header>
 						<p>An endnote is an aside associated with a specific range of text. As with the footnote, it is indicated by a marker in the text known as the footnote reference, typically a raised number or symbol, and the presentation of the endnote itself is dependent on the presentation medium. Whereas a footnote in print appears at the bottom of a page or object, an endnote typically appears at the end of a chapter or the product itself. In a digital product, the endnote reference is a hyperlink which may launch a popup window or re-direct the user to another location in the publication. The hyperlink to the endnote receives a special class, "noteref endnote", so that software applications and designers can treat them uniquely from other hyperlinks. In the example below, the endnote reference resolves to an endnote section at the end of this chapter.</p>
 						<p>This is body text containing an endnote reference<a class="noteref noteref_rearnote" epub:type="noteref" id="r__P700048580600071A" href="#P700048580600071A">1</a>. It should link to end-of-chapter endnotes. This is normal body text. This is normal body text. This is normal body text. This is normal body text. This is body text containing an endnote reference<a class="noteref noteref_rearnote" epub:type="noteref" id="r__P700048580600071B" href="#P700048580600071B">2</a>. It should link to end-of-chapter endnotes. This is normal body text. This is normal body text. This is normal body text. This is normal body text. This is body text containing an endnote reference<a class="noteref noteref_rearnote" epub:type="noteref" id="r__P700048580600071C" href="#P700048580600071C">3</a>. It should link to end-of-chapter endnotes. This is normal body text. This is normal body text. This is normal body text. This is normal body text. </p>
 					</section>
 					<section id="P70004858060000000000000001116F6" class="level2">
 						<header>
-							<h4 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.3.2 </span>Book Endnotes</h4>
+							<h4 epub:type="title"><span class="number" epub:type="ordinal">2.3.2 </span>Book Endnotes</h4>
 						</header>
 						<p>Endnotes may also appear in the product backmatter. The example below links to product backmatter endnotes.</p>
 						<p>This is body text containing an endnote reference<a class="noteref noteref_rearnote" epub:type="noteref" id="r__P70004858060007D3" href="endnotes.xhtml#P70004858060007D3">1</a>. It should link to product endnotes. This is normal body text. This is normal body text. This is normal body text. This is normal body text.</p>
@@ -174,17 +174,17 @@
 				</section>
 				<section id="P700048580600070E" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.4 </span>Marginalia</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">2.4 </span>Marginalia</h3>
 					</header>
 					<p>Marginalia is an aside that is typically short in length, a single paragraph at most. Unlike a footnote or endnote, there is no visible marginalia reference in the text. Like a foonote, however, sometimes marginalia is highly connected to a span of text and is amplifying that text or commenting on it in some ways. The association with the text is usually communicated through vertically aligning the marginalia in the "margins" of the page with the text to which it corresponds. Other times, marginalia is more like a very small sidebar–somewhat related to the running text but not directly connected. In those cases, the marginalia has some flexibility as to where it positions. Many EPUB Reading Systems/CSS design do not have a good rendering model for marginalia, as some do not provide support for rendering a running text with a margin of art or text running alongside of it in the margins. Consequently the marginal comment ends up in the running text following a paragraph.</p>
 					<aside class="marginalia" id="P700048580600070F"><p>This is the marginalia text. This is the marginalia text. This is the marginalia text.</p></aside>
 					<p>marginalia in current CSS presents in running text following paragraph it should sit next to. This lessens its effectiveness in communicating the author's point and sometimes even confuses the reader. Marginalia is more effective when the CSS and Reading System can present it in a minor column setting alongside the text to which it is an aside. Some have suggested treating marginalia as a popup. If Reading System cannot present marginalia in a format that clearly communicates its relation to content, authors and designers may want to consider other methods of communicating the point</p>
 					<p> Sometimes authors place glossary definitions of keyterms in the margins instead of in the running text. We currently code those glossary definitions as marginalia to instruct the rendering software of the intent to place the glossary definitions in the margin.</p>
 					<aside class="marginalia" id="P7000485806000710" aria-label="glossary">
-						<section class="glossary" epub:type="glossary" id="P7000485806000711" aria-label="definitions">
+						<section epub:type="glossary" id="P7000485806000711" aria-label="definitions">
 							<dl class="glossentrylist">
-								<dt class="glossterm" epub:type="glossterm" id="P7000485806000712"><dfn>glossterm text</dfn></dt>
-								<dd class="glossdef" epub:type="glossdef">
+								<dt epub:type="glossterm" id="P7000485806000712"><dfn>glossterm text</dfn></dt>
+								<dd epub:type="glossdef">
 									<p>This is gloss definition text. This is gloss definition text. This is gloss definition text that should set on same line as glossterm.</p>
 								</dd>
 							</dl>
@@ -193,28 +193,28 @@
 				</section>
 				<section id="P7000485806000713" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.5 </span>Pullquote</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">2.5 </span>Pullquote</h3>
 					</header>
 					<p>A pull quote (also known as a lift-out quote) is a quotation or excerpt from an article that is typically placed in a larger or distinctive typeface on the same page/screen, serving to entice readers into an article or to highlight a key topic (source: http://en.wikipedia.org/wiki/Pullquote)</p>
 					<p>This is normal body text preceding the pullquote. This is normal body text preceding the pullquote. </p>
-					<aside class="pullquote" epub:type="pullquote" id="P7000485806000714"><p>This is pullquote text. This is pullquote text. This is pullquote text. This is pullquote text. This is pullquote text.</p></aside>
+					<aside epub:type="pullquote" id="P7000485806000714"><p>This is pullquote text. This is pullquote text. This is pullquote text. This is pullquote text. This is pullquote text.</p></aside>
 					<p>This is normal body text following the pullquote. This is normal body text following the pullquote.<span class="pagebreak" title="6" epub:type="pagebreak" id="P7000485806000715"/></p>
 				</section>
 				<section id="P7000485806000716" class="level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.5a </span>Annotation</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">2.5a </span>Annotation</h3>
 					</header>
 					<p>An annotation is a block-level note, analysis or commentary that is made regarding the text. It may take the form of notes to the teacher or to the student. A reference to the annotation is inserted into text with a hyperlink having a class of annoref. aside class="annotation annotation_instructor" represents an instructor's annotation.</p>
 					<p>This is body text with annotation reference <a class="annoref" epub:type="noteref" href="#P7000485806000717">4</a> .... <a class="annoref" epub:type="noteref" href="#P7000485806000718">5</a></p>
 					<aside class="annotation annotation_instructor" epub:type="help" id="P7000485806000717">
 						<header>
-							<h4 class="title" epub:type="title"><span class="number" epub:type="ordinal">4 </span><span class="label" epub:type="label">Analyze</span></h4>
+							<h4 epub:type="title"><span class="number" epub:type="ordinal">4 </span><span epub:type="label">Analyze</span></h4>
 						</header>
 						<p>This is the instructor's annotation...</p>
 					</aside>
 					<aside class="annotation" epub:type="help" id="P7000485806000718">
 						<header>
-							<h4 class="title" epub:type="title"><span class="number" epub:type="ordinal">5 </span><span class="label" epub:type="label">Points</span></h4>
+							<h4 epub:type="title"><span class="number" epub:type="ordinal">5 </span><span epub:type="label">Points</span></h4>
 						</header>
 						<p>This is a regular annotation</p>
 					</aside>
@@ -223,16 +223,16 @@
 			<section class="backmatter" id="d6e3272" aria-label="Chapter back">
 				<section epub:type="rearnotes" id="P7000485806000719" class="rearnotes level1">
 					<header>
-						<h3 class="title" epub:type="title"><span class="number" epub:type="ordinal">2.6 </span>Chapter Endnote List</h3>
+						<h3 epub:type="title"><span class="number" epub:type="ordinal">2.6 </span>Chapter Endnote List</h3>
 					</header>
 					<ol class="rearnotelist">
-						<li class="rearnote" epub:type="rearnote" id="P700048580600071A">
+						<li epub:type="rearnote" id="P700048580600071A">
 							<p><span class="number" epub:type="ordinal"><a href="#r__P700048580600071A">1</a></span> This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. </p>
 						</li>
-						<li class="rearnote" epub:type="rearnote" id="P700048580600071B">
+						<li epub:type="rearnote" id="P700048580600071B">
 							<p><span class="number" epub:type="ordinal"><a href="#r__P700048580600071B">2</a></span> This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. </p>
 						</li>
-						<li class="rearnote" epub:type="rearnote" id="P700048580600071C">
+						<li epub:type="rearnote" id="P700048580600071C">
 							<p><span class="number" epub:type="ordinal"><a href="#r__P700048580600071C">3</a></span> This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. This is chapter endnote text. </p>
 						</li>
 					</ol>
