--- a/samples/structure-sample-01/EPUB/xhtml/bibliography01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/bibliography01.xhtml
@@ -8,14 +8,14 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="frontmatter">
-		<section class="bibliography" epub:type="bibliography" id="P70004858060006AF">
+		<section epub:type="bibliography" id="P70004858060006AF">
 			<header>
-				<h1 class="title" epub:type="title" id="P70004858060006B0"><span class="label" epub:type="label">Bibliography Section</span></h1>
+				<h1 epub:type="title" id="P70004858060006B0"><span epub:type="label">Bibliography Section</span></h1>
 			</header>
 			<ol class="biblioentrylist">
-				<li class="biblioentry" epub:type="biblioentry" id="P70004858060006B1"><p>Jamieson, A., Curry, A., &amp; Martinez, G. (2001). School enrollment in the United States—Social and economic characteristics of students. <span class="emphasis">Current Population Report </span>(Report Number P20533). Washington, DC: U.S. Government Printing Office.</p></li>
-				<li class="biblioentry" epub:type="biblioentry" id="P70004858060006B2"><p>National Clearinghouse for Bilingual Education. (1999). K–12 and LEP enrollment trends. Retrieved from <span class="url-obsolete">http://www.ncbe.gwu.edu/ncbepubs/reports/state-data/index.htm</span></p></li>
-				<li class="biblioentry" epub:type="biblioentry" id="P70004858060006B3"><p>TESOL. (1997). <cite>This citation text should be italic but is not due to error in CSS file</cite>. Alexandria, VA: Author.<span class="pagebreak" title="xvi" epub:type="pagebreak" id="P70004858060006B4"/></p></li>
+				<li epub:type="biblioentry" id="P70004858060006B1"><p>Jamieson, A., Curry, A., &amp; Martinez, G. (2001). School enrollment in the United States—Social and economic characteristics of students. <span class="emphasis">Current Population Report </span>(Report Number P20533). Washington, DC: U.S. Government Printing Office.</p></li>
+				<li epub:type="biblioentry" id="P70004858060006B2"><p>National Clearinghouse for Bilingual Education. (1999). K–12 and LEP enrollment trends. Retrieved from <span class="url-obsolete">http://www.ncbe.gwu.edu/ncbepubs/reports/state-data/index.htm</span></p></li>
+				<li epub:type="biblioentry" id="P70004858060006B3"><p>TESOL. (1997). <cite>This citation text should be italic but is not due to error in CSS file</cite>. Alexandria, VA: Author.<span class="pagebreak" title="xvi" epub:type="pagebreak" id="P70004858060006B4"/></p></li>
 			</ol>
 		</section></body>
 </html>
