--- a/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/endnotes.xhtml
@@ -11,20 +11,20 @@
 		<section epub:type="rearnotes" id="P70004858060007D1" class="rearnotes level1">
 			<header>
 				<span class="pagebreak" title="25" epub:type="pagebreak" id="P7000485806000978"/>
-				<h1 class="title" epub:type="title">Book Endnote List</h1>
+				<h1 epub:type="title">Book Endnote List</h1>
 			</header>
 			<section epub:type="rearnotes" id="P70004858060007D2" class="rearnotesdiv level2">
 				<header>
-					<h2 class="title" epub:type="title"><span class="label" epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2</span></h2>
+					<h2 epub:type="title"><span epub:type="label">Chapter </span><span class="number" epub:type="ordinal">2</span></h2>
 				</header>
 				<ol class="rearnotelist">
-					<li class="rearnote" epub:type="rearnote" id="P70004858060007D3">
+					<li epub:type="rearnote" id="P70004858060007D3">
 						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D3">1</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
-					<li class="rearnote" epub:type="rearnote" id="P70004858060007D4">
+					<li epub:type="rearnote" id="P70004858060007D4">
 						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D4">2</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
-					<li class="rearnote" epub:type="rearnote" id="P70004858060007D5">
+					<li epub:type="rearnote" id="P70004858060007D5">
 						<p><span class="number" epub:type="ordinal"><a href="asides.xhtml#r__P70004858060007D5">3</a></span> This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. This is book endnote text. </p>
 					</li>
 				</ol>
