--- a/samples/structure-sample-01/EPUB/xhtml/index01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/index01.xhtml
@@ -10,29 +10,29 @@
 	<body class="fixed" epub:type="index">
 		<section epub:type="index-group" id="P70004858060007BC" class="index-group level2">
 			<header>
-				<h2 class="title" epub:type="title" id="P70004858060007BD"> A </h2>
+				<h2 epub:type="title" id="P70004858060007BD"> A </h2>
 			</header>
-			<ul class="index-entry-list" epub:type="index-entry-list">
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007BE">
-					<p><span class="index-term" epub:type="index-term">Index entry with a single page reference, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
+			<ul epub:type="index-entry-list">
+				<li epub:type="index-entry" id="P70004858060007BE">
+					<p><span epub:type="index-term">Index entry with a single page reference, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
 				</li>
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007BF"><p><span class="index-term" epub:type="index-term">Index entry with multiple page references, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075F">17</a>, <a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P7000485806000768">18</a></p></li>
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007C0">
-					<p><span class="index-term" epub:type="index-term">Index entry with a page range, </span><span class="index-locator-range" epub:type="index-locator-range"><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a>–<a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075F">17</a></span></p>
+				<li epub:type="index-entry" id="P70004858060007BF"><p><span epub:type="index-term">Index entry with multiple page references, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075F">17</a>, <a epub:type="index-locator" href="body-content.xhtml#P7000485806000768">18</a></p></li>
+				<li epub:type="index-entry" id="P70004858060007C0">
+					<p><span epub:type="index-term">Index entry with a page range, </span><span epub:type="index-locator-range"><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a>–<a epub:type="index-locator" href="body-content.xhtml#P700048580600075F">17</a></span></p>
 				</li>
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007C1">
-					<p><span class="index-term" epub:type="index-term">multi-level index entry, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
-					<ul class="index-entry-list" epub:type="index-entry-list">
-						<li class="index-entry" epub:type="index-entry" id="P70004858060007C2">
-							<p><span class="index-term" epub:type="index-term">2nd level entry, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
+				<li epub:type="index-entry" id="P70004858060007C1">
+					<p><span epub:type="index-term">multi-level index entry, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
+					<ul epub:type="index-entry-list">
+						<li epub:type="index-entry" id="P70004858060007C2">
+							<p><span epub:type="index-term">2nd level entry, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a></p>
 						</li>
 					</ul>
 				</li>
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007C3">
-					<p><span class="index-term" epub:type="index-term">1st level entry, </span><a class="index-locator" epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a><span class="index-xref-related" epub:type="index-xref-related">see also <a class="termref" href="index04.xhtml#P70004858060007CD">destination for seealso link</a></span></p>
+				<li epub:type="index-entry" id="P70004858060007C3">
+					<p><span epub:type="index-term">1st level entry, </span><a epub:type="index-locator" href="body-content.xhtml#P700048580600075D">16</a><span epub:type="index-xref-related">see also <a class="termref" href="index04.xhtml#P70004858060007CD">destination for seealso link</a></span></p>
 				</li>
-				<li class="index-entry" epub:type="index-entry" id="P70004858060007C4">
-					<p><span class="index-term" epub:type="index-term">A term used in "see" <span class="index-xref-preferred" epub:type="index-xref-preferred">See <a class="termref" href="index04.xhtml#P70004858060007CE">destination for see link</a></span></span></p>
+				<li epub:type="index-entry" id="P70004858060007C4">
+					<p><span epub:type="index-term">A term used in "see" <span epub:type="index-xref-preferred">See <a class="termref" href="index04.xhtml#P70004858060007CE">destination for see link</a></span></span></p>
 				</li>
 			</ul>
 		</section>
