--- a/samples/structure-sample-01/EPUB/xhtml/list-of-illustrations.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/list-of-illustrations.xhtml
@@ -8,9 +8,9 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed" epub:type="frontmatter">
-		<nav class="loi" epub:type="loi" id="P70004858060006A0">
+		<nav epub:type="loi" id="P70004858060006A0">
 			<header>
-				<h1 class="title" epub:type="title"><span class="pagebreak" title="x" epub:type="pagebreak" id="P70004858060006A1"/>List of illustrations</h1>
+				<h1 epub:type="title"><span class="pagebreak" title="x" epub:type="pagebreak" id="P70004858060006A1"/>List of illustrations</h1>
 			</header>
 			<ol class="tocentrylist">
 				<li><p><a href="figures-tables.xhtml#P7000485806000721">Figure 3.1</a></p></li>
