--- a/samples/structure-sample-01/EPUB/xhtml/part01.xhtml
+++ b/samples/structure-sample-01/EPUB/xhtml/part01.xhtml
@@ -8,9 +8,9 @@
 		<link rel="alternate stylesheet" type="text/css" title="sepia" href="../css/theme/sepia.css" />
 	</head>
 	<body class="fixed">
-		<section class="part" epub:type="part" id="P70004858060006B5">
+		<section epub:type="part" id="P70004858060006B5">
 			<header>
-				<h1 class="title" epub:type="title"><span class="label" epub:type="label">Part </span><span class="number" epub:type="ordinal">I: </span><span class="pagebreak" title="1" epub:type="pagebreak" id="P70004858060006B6"/>Part Title</h1>
+				<h1 epub:type="title"><span epub:type="label">Part </span><span class="number" epub:type="ordinal">I: </span><span class="pagebreak" title="1" epub:type="pagebreak" id="P70004858060006B6"/>Part Title</h1>
 			</header>
 		</section>
 	</body>
